--- a/assets/css/storefront/components/_product-page.scss
+++ b/assets/css/storefront/components/_product-page.scss
@@ -68,6 +68,7 @@
       display: inline-flex;
       position: relative;
       bottom: 0px;
+      margin-right: 4px;
       &.available {
         background-color: #158037;
       }
