--- a/assets/css/storefront/components/_page.scss
+++ b/assets/css/storefront/components/_page.scss
@@ -19,6 +19,11 @@
     margin-top: 2em;
     margin-bottom: 1.7em;
   }
+  .search {
+    padding-top: 1.5em;
+    font-size: $font-size-h3 !important;
+    letter-spacing: 0px !important;
+  }
 }
 .frontpage {
   &__teaser {
