add share buttons

--- a/assets/css/storefront/storefront.scss
+++ b/assets/css/storefront/storefront.scss
@@ -28,6 +28,4 @@
 @import "components/genres";
 @import "components/carousel";
 @import "components/shared";
-@import "components/search";
-
-
+@import "components/social";
