--- a/assets/css/storefront/components/_shared.scss
+++ b/assets/css/storefront/components/_shared.scss
@@ -18,3 +18,40 @@
     }
   }
 }
+
+.burger-menu {
+  position: relative;
+  padding-left: 1.25em;
+  margin: auto;
+}
+.burger-menu:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: -0.4em;
+  width: 1em;
+  height: 0.09em;
+  background: $gray-color-2;
+  box-shadow:
+          0 0.25em 0 0 $gray-color-2,
+          0 0.5em 0 0 $gray-color-2,
+          0 0.75em 0 0 $gray-color-2;
+}
+
+.add-to-cart {
+  height: 1.1em;
+}
+
+.link-box {
+  pointer: cursor;
+  &:hover:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    background-color: white;
+    opacity: 0.2;
+  }
+}
