* Fixed: Categories for New Releases (Today, last 7/30 days) * JWT authentication * Renamed Preorder to Upcoming * Renamed On Stock to In Stock * Introduced Login form

--- a/assets/css/storefront/components/_search.scss
+++ b/assets/css/storefront/components/_search.scss
@@ -43,6 +43,22 @@ $font-size-xs-fixed: 12px;
       text-decoration: underline;
     }
   }
+  &__artist {
+    &__image {
+      position: relative;
+      display: inline-flex;
+      align-items: center;
+      vertical-align: middle;
+      padding: 12px 0;
+      img {
+        margin-top: auto;
+        margin-bottom: auto;
+        height: 54px;
+        width: 54px;
+        border-radius: 50%;
+      }
+    }
+  }
   &__release {
     &__image {
       position: relative;
