--- a/assets/css/storefront/storefront.scss
+++ b/assets/css/storefront/storefront.scss
@@ -31,3 +31,5 @@
 @import "components/social";
 @import "components/search";
 @import "components/charts";
+@import "components/account";
+@import "components/artists";
