--- a/assets/css/storefront/components/_charts.scss
+++ b/assets/css/storefront/components/_charts.scss
@@ -11,4 +11,61 @@
       font-size: $font-size-h3;
     }
   }
+  &__input {
+    &__release {
+      width: 100%;
+      padding: 12px 20px;
+      border-radius: 2px;
+    }
+  }
+  &__display {
+    display: inline-flex;
+    width: 100%;
+    //justify-content: center;
+    //flex-direction: column;
+    img {
+      width: 52px;
+      height: 52px;
+    }
+    &__info {
+      padding: 12px
+    }
+  }
+  &__rank {
+    width: 30px;
+  }
+  &__item-box {
+    display: flex;
+    padding: 5px 0;
+    align-items: center;
+    justify-content: center;
+    border-bottom: 1px solid #EBE9E6;
+  }
+  &__search-results {
+    width: 100%;
+  }
+  &__save-button {
+    height: 48px;
+    position: relative;
+    background-color: $brand-color-green;
+    border-radius: 2px;
+    display: inline-block;
+    line-height: 48px;
+    width: 12em;
+    color: white;
+    text-align: center;
+    font-size: $font-factor + em;
+    vertical-align: top;
+
+    &:hover:after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: black;
+      opacity: 0.1;
+    }
+  }
 }
