--- a/assets/css/storefront/components/_shared.scss
+++ b/assets/css/storefront/components/_shared.scss
@@ -55,3 +55,27 @@
     opacity: 0.2;
   }
 }
+
+.button {
+  height: 48px;
+  position: relative;
+  background-color: $brand-color-green;
+  border-radius: 2px;
+  display: inline-block;
+  line-height: 48px;
+  width: 12em;
+  color: white;
+  text-align: center;
+  font-size: $font-factor + em;
+  vertical-align: top;
+  &:hover:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0.1;
+  }
+}
