--- a/assets/css/storefront/components/_charts.scss
+++ b/assets/css/storefront/components/_charts.scss
@@ -1,6 +1,9 @@
+$chart-item-padding: 25px;
+
 .charts {
   &-infobox {
     height: 268px;
+    margin-bottom: 3em;
     img {
       height: 208px;
       width: 100%;
@@ -8,7 +11,13 @@
     }
     &__name {
       margin-top: .5em;
-      font-size: $font-size-h3;
+      font-size: 20px;
+      margin-bottom: .3em;
+    }
+    &__label {
+      font-size: $font-size-sm;
+      opacity: 0.6;
+      color: $brand-color-black;
     }
   }
   &__input {
@@ -66,6 +75,155 @@
       height: 100%;
       background-color: black;
       opacity: 0.1;
+    }
+  }
+  &__detail {
+    margin-top: 4em;
+    &__item {
+      color: $brand-color-black;
+      display: flex;
+      flex-direction: row;
+      width: 100%;
+      border-bottom: 1px solid $gray-color-2;
+      position: relative;
+      &:hover {
+        color: $brand-color-black;
+        &:after {
+          content: '';
+          pointer-events: none;
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background-color: $gray-color-1;
+          opacity: 0.1;
+        }
+        .charts__detail__buttons {
+          opacity: 1;
+        }
+      }
+    }
+    &__rank {
+      width: 40px;
+      padding: $chart-item-padding;
+      font-size: $font-size-h2;
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+    }
+    &__thumb {
+      padding: $chart-item-padding;
+      img {
+        width: 60px;
+        height: 60px;
+      }
+    }
+    &__info-box {
+      padding: $chart-item-padding;
+      width: 100% !important;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      .release {
+        &-artist-name {
+
+        }
+        &-title {
+          opacity: 0.5;
+        }
+      }
+    }
+    &__price {
+      width: 160px;
+      padding: $chart-item-padding;
+      display: flex;
+      text-align: right;
+      justify-content: center;
+      flex-direction: column;
+      opacity: 0.5;
+    }
+    &__buttons {
+      opacity: 0;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      width: 380px;
+      height: auto;
+      &:hover {
+        opacity: 1;
+      }
+    }
+    .release__button-bar {
+      margin-left: auto;
+      margin-right: 0.3em;
+      margin-top: 0;
+      &__add-to-cart {
+        width: 8em;
+      }
+    }
+    &__publisher-box {
+      padding-bottom: 1em;
+      border-bottom: 1px solid $gray-color-2;
+      .publisher-image {
+        img {
+          border-radius: 6px;
+          height: 192px;
+          width: 300px;
+        }
+        padding-bottom: 1em;
+      }
+      .publisher-name {
+        font-size: $font-size-h4;
+      }
+      .publisher-label {
+        font-size: $font-size-sm;
+        opacity: 0.6;
+      }
+    }
+    &__more-charts {
+      margin-top: 2em;
+      img {
+        margin-right: 0.5em;
+      }
+      .chart-related {
+        margin-bottom: 1em;
+      }
+    }
+  }
+  &__header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    border-bottom: 1px solid $gray-color-2;
+    .page__header {
+      width: inherit;
+      border: none;
+    }
+  }
+  &__share {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    .social-sharing {
+      //margin-left: 1em;
+      display: flex;
+      flex-direction: row;
+      margin-bottom: 0px;
+      justify-content: space-between;
+      width: 50px;
+      .fa {
+        margin-right: inherit;
+      }
+    }
+    &__row {
+      display: flex;
+      flex-direction: row;
+      margin-left: auto;
+      justify-content: space-between;
+      width: 145px;
     }
   }
 }
