Related releases on detail page Fixed: Infinite multiple scrolling triggered infinite searches

--- a/assets/css/storefront/components/_release.scss
+++ b/assets/css/storefront/components/_release.scss
@@ -89,4 +89,11 @@ $font-factor: 0.9;
       padding-right: 15px !important;
     }
   }
+  &__related {
+    &__header {
+      span {
+        color: $brand-color-green
+      }
+    }
+  }
 }
