Some shadows and hover improvements

--- a/assets/css/storefront/components/_product-list.scss
+++ b/assets/css/storefront/components/_product-list.scss
@@ -8,7 +8,7 @@
   a {
     color: $body-color;
     position: relative;
-    display: block;
+    display: flex;
     &:hover {
       text-decoration: none;
     }
