--- a/assets/css/storefront/components/_releaselist.scss
+++ b/assets/css/storefront/components/_releaselist.scss
@@ -2,18 +2,21 @@
   position: relative;
   white-space: nowrap;
   text-overflow: ellipsis;
-  display: block;
+  display: flex;
+  flex-direction: column;
   overflow: hidden;
   padding-top: .4em;
   margin-bottom: 1em;
   &__header {
     position: relative;
     padding-top: 0.5em;
-    height: 16px;
+    height: 24px;
     color: $brand-color-black;
     line-height: 16px;
     font-size: $font-size-sm;
-    display: block;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     &__artist-name {
       display: inline-block;
       max-width: 65%;
@@ -27,7 +30,6 @@
     }
   }
   &__release-title {
-    padding-top: 1em;
     position: relative;
     height: 14px;
     opacity: 0.6;
@@ -49,16 +51,7 @@
 
 .list-item {
   position: relative;
-
-  @include media-breakpoint-down(xs) {
-    img {
-      height: 100px;
-      object-fit: none;
-      object-position: center;
-    }
-    overflow: hidden;
-    height: 200px;
-  }
+  flex: 1;
   @include media-breakpoint-only(xl) {
     height: 240px;
   }
@@ -66,14 +59,19 @@
     height: 180px;
   }
   @include media-breakpoint-only(md) {
-    height: 300px;
+    height: 220px;
   }
   @include media-breakpoint-only(sm) {
-    height: 280px;
+    height: 320px;
+  }
+  @include media-breakpoint-down(xs) {
+    min-height: 260px;
+    max-height: 320px;
   }
 }
 
 .resizable-list-item-inner {
+  position: relative;
   height: 100%;
   width: 100%;
   &:hover {
@@ -99,24 +97,13 @@
       width: 100%;
       float: bottom;
       position: relative;
-      //
-      //&:hover:after {
-      //  content: '';
-      //  position: absolute;
-      //  top: 0;
-      //  left: 0;
-      //  width: 100%;
-      //  height: 100%;
-      //  background-color: $brand-color-black;
-      //  opacity: 0.3;
-      //}
     }
   }
 }
 
 .resizable-list-item-outer {
   position: absolute;
-  height: 220px;
+  display: flex;
   top: 0;
   left: 0;
   width: 100%;
@@ -124,8 +111,14 @@
     background-color: white;
     height: 240px;
     width: 110%;
+    margin-top: -10px;
+    padding-top: 10px;
     margin-left: -5%;
     margin-right: -5%;
+    box-shadow:
+            0 2px 4px 0 rgba(0, 0, 0, 0.15),
+            0 3px 6px 0 rgba(0, 0, 0, 0.14);
+
     z-index: 1;
     .release-list-add {
       display: block;
@@ -152,33 +145,23 @@
       left: 0;
     }
 
+    //heigth: 200%;
+
     @include media-breakpoint-only(xl) {
-      height: 310px
+      height: 325px
     }
     @include media-breakpoint-only(lg) {
       height: 260px
     }
     @include media-breakpoint-only(md) {
-      height: 275px
+      height: 290px
     }
     @include media-breakpoint-down(sm) {
-      height: 280px
+      height: 380px
     }
-  }
-  @include media-breakpoint-up(xl) {
-    height: 240px;
-  }
-  @include media-breakpoint-only(lg) {
-    height: 300px;
-  }
-  @include media-breakpoint-only(md) {
-    height: 260px;
-  }
-  @include media-breakpoint-only(sm) {
-    height: 240px;
-  }
-  @include media-breakpoint-only(xs) {
-    height: 150px;
+    @include media-breakpoint-only(xs) {
+      height: 310px
+    }
   }
 }
 
