--- a/assets/css/storefront/components/_releaselist.scss
+++ b/assets/css/storefront/components/_releaselist.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   overflow: hidden;
   padding-top: .4em;
-  margin-bottom: 1em;
+  //margin-bottom: 1em;
   &__header {
     position: relative;
     padding-top: 0.5em;
@@ -52,6 +52,9 @@
 .list-item {
   position: relative;
   flex: 1;
+  display: flex;
+  padding-bottom: 20px;
+
   @include media-breakpoint-only(xl) {
     height: 240px;
   }
@@ -65,8 +68,7 @@
     height: 320px;
   }
   @include media-breakpoint-down(xs) {
-    min-height: 260px;
-    max-height: 320px;
+    height: 280px;
   }
 }
 
@@ -74,11 +76,8 @@
   position: relative;
   height: 100%;
   width: 100%;
-  &:hover {
-    padding-left: calc(5% - 1px);
-    padding-right: calc(5% - 1px);
-    padding-bottom: 5%;
-  }
+  display: flex;
+  flex-direction: column;
   .release-list {
     &-image {
       position: relative;
@@ -109,7 +108,10 @@
   width: 100%;
   &:hover {
     background-color: white;
-    height: 240px;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-bottom: 5%;
+
     width: 110%;
     margin-top: -10px;
     padding-top: 10px;
@@ -143,24 +145,6 @@
       pointer-events: none;
       top: 0;
       left: 0;
-    }
-
-    //heigth: 200%;
-
-    @include media-breakpoint-only(xl) {
-      height: 325px
-    }
-    @include media-breakpoint-only(lg) {
-      height: 260px
-    }
-    @include media-breakpoint-only(md) {
-      height: 290px
-    }
-    @include media-breakpoint-down(sm) {
-      height: 380px
-    }
-    @include media-breakpoint-only(xs) {
-      height: 310px
     }
   }
 }
