New Social Share Icons Clickaway integration for search and playlist

--- a/assets/css/storefront/components/_search.scss
+++ b/assets/css/storefront/components/_search.scss
@@ -106,5 +106,10 @@ $font-size-xs-fixed: 12px;
       
     }
   }
+  &__spinner {
+    position: absolute;
+    top: 5px;
+    right: 15px;
+  }
 }
 
