--- a/assets/css/storefront/components/_alerts.scss
+++ b/assets/css/storefront/components/_alerts.scss
@@ -28,6 +28,11 @@
     color: $brand-color-black;
     display: inline-block;
   }
+  &__error {
+    background-color: $brand-secondary-color-red;
+    color: white;
+    display: inline-block;
+  }
   &__buttons {
     display: inline-block;
     margin-left: 2em;
