Gerne page rows were broken

--- a/assets/css/storefront/components/_releaselist.scss
+++ b/assets/css/storefront/components/_releaselist.scss
@@ -152,6 +152,7 @@
 .release-list-summary {
   border-bottom: 1px solid $gray-color-2;
   min-height: 300px;
+  padding-bottom: 2em;
   &__header {
     width: 100%;
     position: relative;
