Grey badge when cart is empty

--- a/assets/css/storefront/components/_header.scss
+++ b/assets/css/storefront/components/_header.scss
@@ -451,7 +451,7 @@
       text-align: center;
       cursor: default;
       &.empty {
-        background-color: $dark-gray;
+        background-color: $gray-color-2;
       }
       @include media-breakpoint-down(sm) {
         right: 0;
