remove hover:after effect for play button in release list

--- a/assets/css/storefront/components/_header.scss
+++ b/assets/css/storefront/components/_header.scss
@@ -129,6 +129,7 @@
       background-color: $white;
       z-index: 4;
       border-bottom: 1px solid $gray;
+      height: inherit;
     }
     .static {
       position: static;
