Improved Audioplayer: resized click panel

--- a/assets/css/storefront/components/_page.scss
+++ b/assets/css/storefront/components/_page.scss
@@ -48,7 +48,6 @@
       padding-top: 202px;
       padding-right: 120px;
       margin-bottom: 12em;
-      //display: block;
       height: 560px;
       margin-left: auto;
       margin-right: auto;
@@ -63,12 +62,7 @@
         height: 450px;
       }
 
-      .outer {
-        position: relative;
-        width: 100%;
-        height: 100%;
-      }
-      .inner {
+      .slider {
         position: relative;
         top: 0;
         left: 0;
@@ -77,14 +71,6 @@
         height: 100%;
         width: 100%;
 
-        //&:hover {
-        //  .slide {
-        //    -webkit-animation-play-state: paused;
-        //    -moz-animation-play-state: paused;
-        //    -o-animation-play-state: paused;
-        //    animation-play-state: paused;
-        //  }
-        //}
 
         .slide {
           position: absolute;
@@ -98,8 +84,6 @@
           display: inline-block;
           width: 100%;
           height: 100%;
-          //margin-left: 0;
-          //margin-right: 120px;
         }
       }
     }
@@ -212,10 +196,6 @@
         padding-bottom: 20px;
       }
     }
-  }
-  &__sections {
-    //position: absolute;
-    //margin-top: 1000px;
   }
 }
 
