--- a/assets/css/storefront/components/_audioplayer.scss
+++ b/assets/css/storefront/components/_audioplayer.scss
@@ -58,6 +58,17 @@
     }
     .position-slider {
       margin-bottom: auto;
+      position: relative;
+      .slider {
+        position: absolute;
+        width: 100%;
+        height: 4px;
+        pointer-events: none;
+      }
+      .slider-fill {
+        background-color: $brand-color-green;
+        height: 100%;
+      }
     }
   }
   .audio-control {
@@ -151,7 +162,6 @@
 }
 
 .close-playlist {
-  //box-sizing:border-box;
   margin: auto;
   width:14px;
   height:14px;
@@ -180,16 +190,17 @@
     -moz-appearance: none;
     overflow: hidden;
     width: 100%;
-    margin-top: 0px;
-    background-color: black;
+    position: absolute;
+    margin-top: -8px;
+    background-color: transparent;
     border: none;
   }
 
   input[type='range']::-webkit-slider-runnable-track {
-    height: 4px;
+    height: 20px;
     -webkit-appearance: none;
     -moz-appearance: none;
-    color: #13bba4;
+    cursor: e-resize;
   }
 
   input[type=range]:focus {
@@ -201,10 +212,8 @@
     width: 1px;
     -webkit-appearance: none;
     -moz-appearance: none;
-    height: 20px;
-    cursor: ew-resize;
-    background: #434343;
-    box-shadow: -30000px 0 0 30000px $brand-color-green;
+    height: 22px;
+    //cursor: e-resize;
   }
 }
 
