--- a/assets/css/storefront/components/_audioplayer.scss
+++ b/assets/css/storefront/components/_audioplayer.scss
@@ -64,6 +64,7 @@
         width: 100%;
         height: 4px;
         pointer-events: none;
+        background-color: black;
       }
       .slider-fill {
         background-color: $brand-color-green;
