--- a/assets/css/storefront/components/_page.scss
+++ b/assets/css/storefront/components/_page.scss
@@ -66,7 +66,7 @@
         position: relative;
         top: 0;
         left: 0;
-        overflow: hidden;
+        overflow-x: hidden;
         white-space: pre;
         height: 100%;
         width: 100%;
@@ -109,16 +109,17 @@
       font-size: 3em;
       color: #313532;
       max-width: 60%;
-      overflow: hidden;
+      overflow-x: hidden;
       text-overflow: ellipsis;
       opacity: 0.4;
-      line-height: 1em;
+      line-height: 1.2em;
+      //margin-bottom: 10px;
     }
     &__artist {
       padding-top: .2em;
       display: block;
       max-width: 60%;
-      overflow: hidden;
+      overflow-x: hidden;
       text-overflow: ellipsis;
       font-size: 3em;
     }
