simple artist/genre release list pages

--- a/assets/css/storefront/components/_release.scss
+++ b/assets/css/storefront/components/_release.scss
@@ -96,7 +96,7 @@ $font-factor: 0.9;
   }
   &__related {
     &__header {
-      span {
+      a {
         color: $brand-color-green
       }
     }
