cart badge is grey when no cart item is set or cart is empty

--- a/assets/css/storefront/components/_header.scss
+++ b/assets/css/storefront/components/_header.scss
@@ -475,7 +475,7 @@
       height: 6px;
       text-align: center;
       cursor: default;
-      .empty {
+      &.empty {
         background-color: $gray-color-2;
       }
       @include media-breakpoint-down(sm) {
