--- a/assets/css/storefront/components/_releaselist.scss
+++ b/assets/css/storefront/components/_releaselist.scss
@@ -171,8 +171,11 @@
       color: $gray-color-1;
     }
     a {
-      color: $gray-color-1;
+      //color: $bra;
       text-transform: capitalize;
+      &:hover {
+        text-decoration: underline;
+      }
     }
   }
 }
