margin rem 2em. ist sonst zu nah dran

--- a/assets/css/storefront/components/_product-list.scss
+++ b/assets/css/storefront/components/_product-list.scss
@@ -1,6 +1,6 @@
 .product-list {
   position: relative;
-  margin-bottom: $global-margin * 1;
+  margin-bottom: 2rem;
   img {
     max-width: 100%;
     width: 100%;
