--- a/assets/css/storefront/components/_loader.scss
+++ b/assets/css/storefront/components/_loader.scss
@@ -13,7 +13,7 @@
   position: relative;
   padding-top: $global-padding;
   display: block;
-  margin: 0 auto;
+  margin: 2em auto;
 
   img {
     -webkit-animation: spin 2s linear infinite;
